--- a/gov.html
+++ b/gov.html
@@ -226,7 +226,7 @@
       margin: 20px 0;
       color: #e0e0e0;
     }
-  </style><!-- <!DOCTYPE html>
+  </style><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
